# fluent-fin

./: components.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: icons.tsx  index.ts  side-bar.tsx
src/components/forms/: index.ts  setup-server.tsx  user-login.tsx
src/components/ui/: button.tsx  card.tsx  carousel.tsx  index.ts  input.tsx  toaster.tsx  use-toast.ts
src/lib/forms/: setup-server.tsx  user-login.tsx
src/lib/types/storage/: index.ts  servers.d.ts  user.d.ts
src/routes/: root.tsx  setup.tsx
src/routes/protected/: home.tsx
src/routes/public/: index.ts  server-list.tsx  setup-server.tsx  user-login.tsx
src/utils/: index.ts  initialize-app.ts  jellyfin-api.ts
src/utils/storage/: central.ts  index.ts  servers.ts  user.ts
